[metadata]
name = stf-decomposition-thodson-usgs
version = 0.0.1
author = Timothy O. Hodson
author_email = thodson@usgs.gov
description = STF: seasonal-trend decomposition using the Fast Fourier transform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thodson-usgs/stf-decomposition
project_urls =
    Bug Tracker = https://github.com/thodson-usgs/stf-decomposition/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CC0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
